validator, swagger changes
